commited final project